# GCS_Planning_Project

./: .gitignore  CMakeLists.txt  README.md  adv_opt_finalproj_tstack.pptx
configs/: gcs_config1.json  gcs_config2.json  gcs_config3.json  gcs_config4.json  gcs_config5.json  gcs_config6.json
include/: free_space_cdt.h  gcs_planner_pointrobot.h  gcs_planner_robotarm.h  gcs_structs.h
maps/: map1.json  map2.json  map3.json  map4.json  map5.json  map6.json
results/: map_vis.ipynb
results/config1/: convex_regions.json  gcs_graphviz.dot  trajectory.csv  triangles.json
results/config2/: trajectory.csv
results/config3/: trajectory.csv
results/config4/: trajectory.csv
results/config5/: trajectory.csv
results/config6/: trajectory.csv
results/config7/: trajectory.csv
src/: free_space_cdt.cpp  gcs_planner_pointrobot.cpp  gcs_planner_robotarm.cpp  main.cpp
